# handwrite_g2o

./: CMakeLists.txt  result.g2o
backend/: base_binary_edge.h  base_binary_edge.hpp  base_edge.h  edge_SE3ProjectXYZ.cpp  edge_SE3ProjectXYZ.h  edge_pose2pose.cpp  edge_pose2pose.h  problem.cpp  problem.h  se3quat.h  vertex.h  vertex.hpp  vertex_point.h  vertex_pose.h
data/: min_sphere.g2o
test/: main.cpp  test.cpp
